--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -57,33 +57,33 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />
 
-    <EditText
-        android:id="@+id/editTextTextMultiLine2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
-        android:ems="10"
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
-        android:hint="@string/dominate"
-        android:text="@string/find_a_team_in_your_city_and_dominate_the_league"
-        android:textColor="@color/silver"
+    <TextView
+        android:id="@+id/textViewDesiredLeague"
+        android:layout_width="296dp"
+        android:layout_height="110dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="96dp"
+        android:singleLine="false"
+        android:text="@string/find_a_team"
+        android:textAlignment="center"
+        android:textColor="@color/colorAccent"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
-        android:autofillHints="" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewSubTitle" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonGetStarted"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
-        android:background="@drawable/swoosh_button"
+        android:background="@drawable/button_back"
         android:text="@string/get_started"
         android:textColor="@color/colorAccent"
-        android:textSize="24sp"
+        android:textSize="@dimen/btn_nav_font"
         app:layout_constraintBottom_toBottomOf="@+id/imageViewBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
