--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/welcomescreenbg"
-    tools:context=".WelcomeActivity">
+    tools:context=".controller.WelcomeActivity">
 
     <TextView
         android:id="@+id/textViewSubTitle"
